GNOME Bugzilla – Bug 636742
EphyLocationAction: fix potential leak
Last modified: 2010-12-08 21:42:10 UTC
If the lock_stock_id is set multiple times, the previous value will be overwritten and leaked. Potential fix attached.
Created attachment 176037 [details] [review] EphyLocationAction: fix potential leak Free the lock_stock_id before setting a new one.
Review of attachment 176037 [details] [review]: Great, thanks! (do you have commit rights?)
thanks. pushed as eb8fa514e6e3edb93be01d44ecc80608501979df