EphyLocationAction: fix potential leak

Free the lock_stock_id before setting a new one.

https://bugzilla.gnome.org/show_bug.cgi?id=636742